<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/activity_twitsplit_constraintLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TweeterActivity"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/layout_background">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_twitsplit_input_TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activityMain_textInputLayoutMargin"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:hintTextAppearance="@style/GreyScaleEditTextFloatingLabel"
            style="@style/GreyScaleEditTextLayout">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_twitsplit_input_TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:lines="3"
                android:hint="@string/editText_hint"
                android:textSize="@dimen/textSize"
                android:textColor="@color/input_text"
                android:layout_margin="@dimen/activityMain_textInputEditTextMargin"
                android:gravity="top|start"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
        />

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/activity_twitsplit_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:textSize="@dimen/textSize"
            android:theme="@style/AppTheme.Button"
            android:layout_marginTop="@dimen/activityMain_textInputLayoutMargin"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_twitsplit_input_TextInputLayout"
    />
</android.support.constraint.ConstraintLayout>