<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/cardView_cardElevation"
            app:cardUseCompatPadding="true"
            card_view:cardCornerRadius="@dimen/cardView_cardCornerRadius">

        <TextView
                android:id="@+id/card_view_ans_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/textSize"
                android:text="@string/cardView_text"
                android:layout_margin="@dimen/cardView_tv_margin"
        />

    </android.support.v7.widget.CardView>

</LinearLayout>